src/Components/Sidebar/sidebar.scss
.sidebar{
    flex:1;
    border-right: 0.3px solid rgb(233, 230, 230);
    min-height: 100vh;
    background-color: white;
    

    
    @media screen and (max-width: 768px){
        display:none;
        width: 50%;
    }

  
    .top{
        height: 50px;
        display: flex;
        align-items: center;
        justify-content: center;
        @media screen and (max-width: 768px){
            display: flex;
            // gap: 25px;
            justify-content: space-between;
            align-items: center;
            padding-left: 15px;
            padding-right: 20px;

            
        }

        .logo{
            font-size: 20px;
            font-weight: bold;
            color:#8884d8;

            @media screen and (max-width: 768px){
                font-size: 14px;
            }
        }

        .btn-close{
            display: none;

            
    @media screen and (max-width: 768px){
        display: inline-block;
        width: 30px;
        height: 30px;
    }
        }
    }
    hr{
        color:red;
        height: 0;
        border:  0.5px solid rgb(233, 230, 230);
        
    }

    .center{
        padding-left: 20px;

        ul{
            list-style: none;
            padding: 0;
            margin: 0;

            .title{
                font-size: 12px;
                font-weight: bold;
                color: #999;
                margin-top: 15px;
                margin-bottom: 5px;
            }
            li{
                display: flex;
                align-items: center;
                padding: 5px;
                cursor: pointer;

                &:hover{
                    background-color: #ece8ff;
                }

                .icon{
                    font-size: 18px;
                    color:#8884d8;
                }
                span{
                    font-style: 13px;
                    font-weight: 600;
                    color: #888
                }
            }
        }
    }

    .bottom{
        display: flex;
        align-items: center;
        margin: 20px;
      


        .colorOptions{
            width: 20px;
            height: 20px;
            border-radius: 5px;
            border: 1px solid #7451f8;
            margin-right: 10px;
            cursor: pointer;

            &:nth-child(1){
                    background-color: white;
            }

            &:nth-child(2){
                background-color:black;
                border: 1px solid black;
        }
        }
    }
}

.sidebar.responsive {
    position: absolute;
    min-height: 100vh;
    width: 40%;
    left: 0;
    top: 0;
    display: block;
    z-index: 10;
    transition : display 1s;
    opacity:1;

    @media screen and (max-width: 768px){
        width: 40%;
    }
    @media screen and (min-width: 768px){
        flex:1;
        border-right: 0.3px solid rgb(233, 230, 230);
        min-height: 100vh;
        background-color: white;
    }
}

